# vmware-vcp-vvf-vcf-certs

./: .codecov.yml  .contributors-activation  .env.template  .github-verified  .gitignore  .gpg-verified  .imgbotconfig  .markdownlint.json  .pre-commit-config.yaml  .security-status  .trivyignore  .ultra-secure-status  .workflow-trigger  AUTO-PUSH-ENABLED.md  CHANGELOG.md  CODEQL_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  FOLDER_REFRESH.md  FREE-TIER-OPTIMIZATION.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  STUDY-LOG.md  TECHNICAL_NOTES.md  enhancement.md  main.py  package.json  performance.md  pyproject.toml  pytest.ini  requirements.txt
.amazonq/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  copilot.yml  dependabot.yml  renovate.json  stale.yml  verified.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-approve.yml  auto-fix.yml  ci.yml  codeql.yml  contributors.yml  deploy.yml  release.yml  security-scan.yml  security.yml  self-healing.yml  weekly-activity.yml
config/: config.yml
docs/: .refresh  CERTIFICATION-GUIDE.md  PULL-REQUEST-001.md  api.md  architecture.md  configuration.md  installation.md  troubleshooting.md  vmware-official-guide.md
docs/administrator/: README.md
docs/architect/: README.md
docs/vcf-support/: README.md
docs/vvf-administrator/: README.md
docs/vvf-support/: README.md
examples/: advanced_usage.py  basic_usage.py
labs/: .refresh
labs/lab1-deployment/: README.md
practice-exams/2V0-13-25/: sample-questions.md
practice-exams/vcp-vcf/: .refresh  sample-questions.md
tests/: __init__.py  test-enhancement.md  test_main.py
