[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmware-vcp-vvf-vcf-certs"
version = "1.0.0"
description = "Enterprise VMware certificate management solution"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "uldyssian-sh", email = "25517637+uldyssian-sh@users.noreply.github.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/uldyssian-sh/vmware-vcp-vvf-vcf-certs"
